No volume scattering shadows for semi-transparent objects if multisampled scene motion blur is on #48346

Closed
opened 2016-05-03 16:28:52 +02:00 by Daniele De Luca · 9 comments

System Information
Linux x64 - Quadro 4000

Blender Version
Broken: 2.77, 2.77a

Short description of error
The scattering of the shadow inside a volume object doesn't work for semi-transparent (e.g diffuse mixed with transparent) objects if the scene motion blur is activated

Exact steps for others to reproduce the error
Create a powerful spot lamp (strength 5000)
Create a big cube, assign a volume scatter material with semi low density (0.01-0.1)
Create a small cube inside the volumetric cube, assign a semi transparent material to the object
Animate the small cube (rot)
Activate motion blur

Render to see that there isn't any scattered shadows of the semi transparent object when it is moving

bug motion blur.blend

**System Information** Linux x64 - Quadro 4000 **Blender Version** Broken: 2.77, 2.77a **Short description of error** The scattering of the shadow inside a volume object doesn't work for semi-transparent (e.g diffuse mixed with transparent) objects if the scene motion blur is activated **Exact steps for others to reproduce the error** Create a powerful spot lamp (strength 5000) Create a big cube, assign a volume scatter material with semi low density (0.01-0.1) Create a small cube inside the volumetric cube, assign a semi transparent material to the object Animate the small cube (rot) Activate motion blur Render to see that there isn't any scattered shadows of the semi transparent object when it is moving [bug motion blur.blend](https://archive.blender.org/developer/F308894/bug_motion_blur.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Sparazza

Added subscriber: @Sparazza

Added subscriber: @Sergey

Added subscriber: @Sergey

I don't see the issue by comparing results of render with and without motion blur. After enabling motion blur shadow is becoming more fuzzy, exactly what you would expect.

So what makes you to believe there's a bug here?

I don't see the issue by comparing results of render with and without motion blur. After enabling motion blur shadow is becoming more fuzzy, exactly what you would expect. So what makes you to believe there's a bug here?

Rendering with two material configuration of the attached blend I see the behaviour in the image
in the viewport, with no motion blur, all seem to be right

What else could I provide to investigate more?Screenshot from 2016-05-03 18:00:57.jpg

Rendering with two material configuration of the attached blend I see the behaviour in the image in the viewport, with no motion blur, all seem to be right What else could I provide to investigate more?![Screenshot from 2016-05-03 18:00:57.jpg](https://archive.blender.org/developer/F308904/Screenshot_from_2016-05-03_18_00_57.jpg)
Sergey Sharybin self-assigned this 2016-05-03 18:12:07 +02:00

Ok so, in order to reproduce the bug the material is to be switched to the nodes which are in the "NO" frame.

Will have a look into the issue.

Ok so, in order to reproduce the bug the material is to be switched to the nodes which are in the "NO" frame. Will have a look into the issue.

This issue was referenced by 980f3c3693

This issue was referenced by 980f3c36937a5b7b0a967b4c68c43168ccc583b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@c5993b1782

This issue was referenced by blender/cycles@c5993b178296ca6ebd9085b8521cc17fa7f1fb0e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48346
No description provided.