Fix T48346: Transparent shadows do not work for instanced objects